# MultiPatientImageProcessing

./: .gitignore  ApplicationBase.cpp  ApplicationBase.h  ApplicationGeodesicTrainingSegmentation.cpp  ApplicationGeodesicTrainingSegmentation.h  CMakeLists.txt  MpipMitkViewer.cpp  MpipMitkViewer.h  README.md  Scheduler.cpp  Scheduler.h  ViewerBase.cpp  ViewerBase.h  VtkViewer.cpp  VtkViewer.h  cpack.cmake  files.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_old.cpp  mainwindow_old.ui
Applications/: ApplicationGeodesicTrainingSegmentation.cmake  CMakeLists.txt
applications/: ApplicationGeodesicTrainingSegmentation.cmake  CMakeLists.txt
applications/GeodesicTraining/: CMakeLists.txt
applications/GeodesicTraining/GeodesicTrainingSegmentation/: CMakeLists.txt
cmake/: cpack.cmake  dependencies.cmake  files.cmake  viewer.cmake
core/: ApplicationBase.h  CMakeLists.txt  DataManager.cpp  DataManager.h  DataManagerBase.cpp  DataManagerBase.h  DataTreeView.cpp  DataTreeView.h  DataViewBase.cpp  DataViewBase.h  ImageViewerBase.cpp  ImageViewerBase.h  MPIPQmitkSegmentationPanel.cpp  MPIPQmitkSegmentationPanel.h  MPIPQmitkSegmentationPanel.ui  MitkViewer.cpp  MitkViewer.h  MpipMitkViewer.cpp  MpipMitkViewer.h  MpipMitkViewer_OLD.cpp  Scheduler.cpp  Scheduler.h  SchedulerBase.h  ViewerBase.cpp  ViewerBase.h  VtkViewer.ui
core/base/: ApplicationBase.cpp  CMakeLists.txt  DataManager.cpp  DataManager.h  DataTreeView.cpp  DataTreeView.h  DataViewBase.cpp  DataViewBase.h  DefaultScheduler.cpp  DefaultScheduler.h  ImageViewerBase.h  Scheduler.cpp  Scheduler.h  SchedulerBase.cpp  SchedulerBase.h
core/base/algorithm/: AlgorithmModuleBase.cpp  AlgorithmModuleBase.h
core/base/gui/: DataTreeView.cpp  DataTreeView.h  DataViewBase.cpp  DataViewBase.h  GuiModuleBase.cpp  GuiModuleBase.h  ImageViewerBase.cpp  ImageViewerBase.h
core/base/gui/basic_elements/: ActionPushButton.h  ActionWidget.h  InfoLabel.h  RunPushButton.h  SideWidget.cpp  SideWidget.h  SideWidget.ui  WarningCritical.cpp  WarningCritical.h  WarningCritical.ui  WarningImportant.h  WarningInformation.cpp  WarningInformation.h  WarningInformation.ui
core/base/other/: DefaultScheduler.cpp  DefaultScheduler.h  ObserverBase.cpp  ObserverBase.h  WarningFunctionBase.cpp  WarningFunctionBase.h  WarningManager.cpp  WarningManager.h
core/cmake/: files.cmake  macros.cmake  master.cmake  mitk.cmake  viewer.cmake
core/modules/: CMakeLists.txt
core/modules/algorithms/ExampleAlgorithm/: CMakeLists.txt  options.cmake
core/modules/algorithms/GeodesicTraining/: CMakeLists.txt  GeodesicTrainingModule.cpp  GeodesicTrainingModule.h  GeodesicTrainingQt.cpp  GeodesicTrainingQt.h  GeodesicTrainingQtOnly.cpp  GeodesicTrainingQtOnly.h  ModuleGeodesicTraining.cpp  ModuleGeodesicTraining.h  options.cmake
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/: CMakeLists.txt
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/AdaptiveGeodesicDistance/: CMakeLists.txt
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/GeodesicTrainingSegmentation/include/GeodesicTrainingSegmentation/: OperationsSvmGTS.h
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/RandomForestSuite/: CMakeLists.txt
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/SvmSuite/: CMakeLists.txt
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/include/GeodesicTrainingSegmentation/: GeodesicTrainingSegmentation.h  Processing.h  UtilItkGTS.h
core/modules/algorithms/GeodesicTraining/GeodesicTraining_external/include/GeodesicTrainingSegmentation/cbica_toolkit/: cbicaITKImageInfo.h
core/modules/algorithms/GeodesicTraining/Warnings/: GeodesicTrainingWarningImageSize.cpp  GeodesicTrainingWarningImageSize.h
core/modules/gui/GeodesicTrainingGUI/: CMakeLists.txt  GeodesicTrainingGUI.cpp  GeodesicTrainingGUI.h  GeodesicTrainingGUI.ui  GeodesicTrainingWarningGUI.cpp  GeodesicTrainingWarningGUI.h  options.cmake
core/modules/gui/MitkDrawingTool/: CMakeLists.txt  MPIPQmitkSegmentationPanel.ui  MitkDrawingTool.cpp  MitkDrawingTool.h  MitkDrawingTool.ui  options.cmake
core/modules/gui/MitkImageViewer/: CMakeLists.txt  CustomQmitkStdMultiWidget.cpp  CustomQmitkStdMultiWidget.h  MitkImageViewer.cpp  MitkImageViewer.h  options.cmake
core/modules/gui/MitkSegmentationTool/: CMakeLists.txt  CustomQmitkLabelSetWidget.cpp  CustomQmitkLabelSetWidget.h  CustomQmitkLabelSetWidgetControls.ui  MitkSegmentationTool (copy).h  MitkSegmentationTool.cpp  MitkSegmentationTool.h  MitkSegmentationTool.ui  MitkSegmentationToolController.cpp  MitkSegmentationToolController.h  options.cmake
core/modules/other/MitkCommon/: CMakeLists.txt  MitkDataManager.cpp  MitkDataManager.h  MitkIO.cpp  MitkIO.h  options.cmake
core/modules/other/MitkGeneral/: CMakeLists.txt  CustomMitkDataStorage.cpp  CustomMitkDataStorage.h  options.cmake
core/modules/other/MitkGeneral/test/: CMakeLists.txt  test.cpp  test_image.nrrd
scripts/: MLL.bat  MLL.pyw  MLL_NSIS_SCRIPT.nsi  MLL_NSIS_SCRIPT2.nsi  MpipLinuxDeploy.sh
src/: CMakeLists.txt  dark.qss  files.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/cmake/: cpack.cmake  dependencies.cmake  files.cmake
src/resources/: dark.qss  material_dark.qss  resource.qrc
